# DesktopScreen

./: README.md
code/DesktopScreen/main/: CMakeLists.txt  main.c  main.h
code/DesktopScreen/main/HW/Inc/: ds_system_data.h
code/DesktopScreen/main/HW/Inc/data/: ds_data_icon.h  ds_data_page.h
code/DesktopScreen/main/HW/Inc/draw/: ds_font.h
code/DesktopScreen/main/HW/Inc/net/: ds_http_request.h
code/DesktopScreen/main/HW/Inc/ui/: ds_ui_mainpage.h  ds_ui_page_manage.h
code/DesktopScreen/main/HW/Src/: ds_system_data.c
code/DesktopScreen/main/HW/Src/data/: ds_data_icon.c  ds_data_num.c  ds_data_page.c  ds_data_weather.c
code/DesktopScreen/main/HW/Src/draw/: ds_font.c  ds_paint.c
code/DesktopScreen/main/HW/Src/driver/: ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_pwm.c  ds_spi.c  ds_timer.c
code/DesktopScreen/main/HW/Src/net/: ds_http_request.c  ds_http_server.c  ds_https_request.c  ds_sntp.c  ds_wifi_ap_sta.c  ds_wifi_sta.c
code/DesktopScreen/main/HW/Src/screen/: ds_ft6336.c  ds_screen.c
code/DesktopScreen/main/HW/Src/ui/: ds_ui_mainpage.c  ds_ui_page_manage.c  ds_ui_timepage.c  ds_ui_tomatopage.c  ds_ui_weatherpage.c  ds_ui_wordpage.c
code/DesktopScreen/main/html/: setting.html
code/main/: hello_world_main.c
code/project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
code/project/main/: CMakeLists.txt  config.c  config.h  main.c
code/project/main/HW/Inc/data/: ds_data_page.h
code/project/main/HW/Inc/draw/: ds_font.h
code/project/main/HW/Inc/gpio/: d_gpio.h
code/project/main/HW/Inc/i2c/: d_i2c.h
code/project/main/HW/Inc/nvs/: d_nvs.h
code/project/main/HW/Inc/screen/: d_ft6336.h  d_screen.h
code/project/main/HW/Inc/spi/: d_spi.h
code/project/main/HW/Inc/spiffs/: d_spiffs.h
code/project/main/HW/Inc/timer/: d_timer.h
code/project/main/HW/Inc/ui/: ds_ui_mainpage.h  ds_ui_page_manage.h
code/project/main/HW/Src/: d_system_data.c
code/project/main/HW/Src/data/: ds_data_page.c
code/project/main/HW/Src/draw/: ds_font.c  ds_paint.c
code/project/main/HW/Src/gpio/: d_gpio.c
code/project/main/HW/Src/i2c/: d_i2c.c
code/project/main/HW/Src/net/: ds_wifi_ap.c
code/project/main/HW/Src/nvs/: d_nvs.c
code/project/main/HW/Src/screen/: d_ft6336.c  d_screen.c
code/project/main/HW/Src/spi/: d_spi.c
code/project/main/HW/Src/spiffs/: d_spiffs.c
code/project/main/HW/Src/timer/: d_timer.c
code/project/main/HW/Src/ui/: ds_ui_fans.c  ds_ui_mainpage.c  ds_ui_page_manage.c  ds_ui_timepage.c  ds_ui_tomatopage.c  ds_ui_weatherpage.c  ds_ui_wordpage.c
code/project_init/main/: CMakeLists.txt  main.c
code/project_init/main/HW/Inc/: d_system_data.h
code/project_init/main/HW/Inc/gpio/: d_gpio.h
code/project_init/main/HW/Inc/nvs/: d_nvs.h
code/project_init/main/HW/Inc/spiffs/: d_spiffs.h
code/project_init/main/HW/Inc/timer/: d_timer.h
code/project_init/main/HW/Src/: d_system_data.c
code/project_init/main/HW/Src/gpio/: d_gpio.c
code/project_init/main/HW/Src/nvs/: d_nvs.c
code/project_init/main/HW/Src/spiffs/: d_spiffs.c
code/project_init/main/HW/Src/timer/: d_timer.c
