idf_component_register(
                    SRCS "main.c"
                    "HW/Src/timer/d_timer.c"
                    "HW/Src/spiffs/d_spiffs.c"
                    "HW/Src/nvs/d_nvs.c"
                    "HW/Src/d_system_data.c"
                    "HW/Src/gpio/d_gpio.c"
                    "HW/Src/i2c/d_i2c.c"
                    "HW/Src/screen/d_ft6336.c"
                    "HW/Src/spi/d_spi.c"
                    "HW/Src/screen/d_screen.c"
                    "HW/Src/ui/ds_ui_fans.c"
                    "HW/Src/ui/ds_ui_mainpage.c"
                    "HW/Src/ui/ds_ui_page_manage.c"
                    "HW/Src/ui/ds_ui_timepage.c"
                    "HW/Src/ui/ds_ui_tomatopage.c"
                    "HW/Src/ui/ds_ui_weatherpage.c"
                    "HW/Src/ui/ds_ui_wordpage.c"
                    "HW/Src/data/ds_data_icon.c"
                    "HW/Src/data/ds_data_num.c"
                    "HW/Src/data/ds_data_page.c"
                    "HW/Src/data/ds_data_weather.c"
                    "HW/Src/draw/ds_font.c"
                    "HW/Src/draw/ds_paint.c"
                    "HW/Src/net/ds_wifi_ap.c"
                    "config.c"

                    INCLUDE_DIRS "."
                    "HW/Inc/timer"
                    "HW/Inc/spiffs"
                    "HW/Inc/nvs"
                    "HW/Inc/gpio"
                    "HW/Inc/i2c"
                    "HW/Inc/screen"
                    "HW/Inc/spi"
                    "HW/Inc/ui"
                    "HW/Inc/data"
                    "HW/Inc/draw"
                    "HW/Inc/net"
                    )
